fix(ranking): put hidden overflow

--- a/sections-css/header.css
+++ b/sections-css/header.css
@@ -110,6 +110,7 @@ header {
     margin-top: 60px;
     display: flex;
     gap: 60px;
+    overflow: hidden;
 }
 .ranking-h2-circle {
     position: relative;
